--- a/lib/generators/notable/templates/create_requests.rb.tt
+++ b/lib/generators/notable/templates/create_requests.rb.tt
@@ -13,7 +13,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.text :user_agent
       t.text :referrer
       t.text :params
-      t.decimal :request_time
+      t.float :request_time
       t.timestamp :created_at
     end
 
