Use references for migration

--- a/lib/generators/notable/templates/create_requests.rb.tt
+++ b/lib/generators/notable/templates/create_requests.rb.tt
@@ -3,8 +3,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
     create_table :notable_requests do |t|
       t.string :note_type
       t.text :note
-      t.integer :user_id
-      t.string :user_type
+      t.references :user, polymorphic: true
       t.text :action
       t.integer :status
       t.text :url
@@ -16,7 +15,5 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.float :request_time
       t.timestamp :created_at
     end
-
-    add_index :notable_requests, [:user_id, :user_type]
   end
 end
