--- a/lib/generators/notable/templates/create_jobs.rb.tt
+++ b/lib/generators/notable/templates/create_jobs.rb.tt
@@ -8,7 +8,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.string :queue
       t.float :runtime
       t.float :queued_time
-      t.timestamp :created_at
+      t.datetime :created_at
     end
   end
 end
